results/SpecGenBench/2-shot/log-PowerOfTwoLoop-2023_11_28_15_03_56.txt
class PowerOfTwoLoop {
    //@ ensures \result <==> n > 0 && (\forall int i; n%2 == 0; n/2);
    public boolean isPowerOfTwo(int n) {
        if(n <= 0) {
            return false;
        }
        //@ maintaining n > 0;
        //@ maintaining (\forall int i; n%2 == 0; n/2);
        //@ decreases n;
        while (n % 2 == 0) {
            n /= 2;
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/PowerOfTwoLoop.java:2: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result <==> n > 0 && (\forall int i; n%2 == 0; n/2);
                                                                 ^
/home/max/Documents/JMLGPT/tmp/PowerOfTwoLoop.java:8: error: incompatible types: int cannot be converted to boolean
        //@ maintaining (\forall int i; n%2 == 0; n/2);
                                                   ^
2 errors

